# designingeffectivecollaborativelearningsystems

./: .gitignore  .gitlab-ci.yml  FoodManuData1993_2024.xlsx  README.md  config.yaml  evaluation.ipynb  evaluation_itegrated_Experiment.ipynb  final_full_factorial_config_compact_names.yaml  main.py  pyproject.toml  requirements.txt  ~$Evaluation_Overview_Experiment_I.xlsx
ML_Backends/: __init__.py  base.py  chronos.py  lstm_local.py  lstm_split.py  ma.py  patchtst_local.py  patchtst_split.py  split_timemixer_option_d_backend.py  timemixer_local.py  timemixer_split.py  timesfm.py
ML_Models/: model.py
Results/Eval_Realworld1/simulation_2024_05_25_23_14_23/: config.json
Results/Eval_Realworld1/simulation_2024_05_25_23_14_33/: config.json
Results/Eval_Realworld1/simulation_2024_05_25_23_14_43/: config.json
Results/Eval_Realworld2/simulation_2024_05_26_14_40_11/: config.json
Results/Eval_Realworld2/simulation_2024_05_26_14_40_33/: config.json
Results/Evaluation/: Evaluation_Overview_Experiment_I.xlsx  Evaluation_Overview_Experiment_II.xlsx  Evaluation_Overview_Experiment_III.xlsx  MAE_Agent_Table.xlsx  MAE_System_PairedT_Test_Results.xlsx  MSE_Agent_Table.xlsx  MSE_System_PairedT_Test_Results.xlsx
Results/Evaluation_Leadtime/: leadtime_model_comparison.xlsx  leadtime_model_pairwise_tests.xlsx  scenario_model_tables_by_leadtime.md  scenario_model_tables_by_leadtime.xlsx
Simulation_Component/: agent.py  market.py  reporting.py  runner.py  simulation.py  supply_chain.py
helpers/: helper_classes.py  helpers.py
(+86 files in other folders)
